Clear up errors in latest JDK/Eclipse combo